Aggiornate immagini use case

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -142,17 +142,17 @@ completamento del progetto:
 
 \subsection{Diagramma dei casi d'uso}
 
-%\includegraphics[scale=0.7]{diagramma_use_case_1.png}
-%\includegraphics[scale=0.7]{diagramma_use_case_2.png}
-%\includegraphics[scale=0.7]{diagramma_use_case_3.png}
+\includegraphics[scale=0.7]{diagramma_use_case_1.png}
+
+\includegraphics[scale=0.7]{diagramma_use_case_2.png}
+
+\includegraphics[scale=0.7]{diagramma_use_case_3.png}
 
 \includegraphics[scale=0.7]{diagramma_use_case_4.png}
 
 \includegraphics[scale=0.7]{diagramma_use_case_5.png}
 
-\includegraphics[scale=0.60]{diagramma_use_case_6.png}
-
-\includegraphics[scale=0.7]{diagramma_use_case_7.png}
+\includegraphics[scale=0.60]{diagramma_use_case_6e7.png}
 
 \includegraphics[scale=0.7]{diagramma_use_case_8.png}
 
