Sistemati i diagrammi degli UC nella sezione 3.1

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -142,13 +142,11 @@ completamento del progetto:
 
 \subsection{Diagramma dei casi d'uso}
 
-\includegraphics[scale=0.7]{diagramma_use_case_1.png}
+\includegraphics[scale=0.8]{diagramma_use_case_1.png}
 
-\includegraphics[scale=0.7]{diagramma_use_case_2.png}
+\includegraphics[scale=0.8]{diagramma_use_case_2.png}
 
-\includegraphics[scale=0.7]{diagramma_use_case_3.png}
-
-\includegraphics[scale=0.7]{diagramma_use_case_4.png}
+\includegraphics[scale=0.65]{diagramma_use_case_3e4.png}
 
 \includegraphics[scale=0.7]{diagramma_use_case_5.png}
 
@@ -160,9 +158,9 @@ completamento del progetto:
 
 \includegraphics[scale=0.60]{diagramma_use_case_10.png}
 
-\includegraphics[scale=0.7]{diagramma_use_case_11.png}
+\includegraphics[scale=0.63]{diagramma_use_case_11.png}
 
-\includegraphics[scale=0.7]{diagramma_use_case_12.png}
+\includegraphics[scale=0.65]{diagramma_use_case_12.png}
 
 \subsection{Attori}
 \begin{itemize}
