--- a/docs/interni/verbali/2023_07_11_I/2023_07_11_I.tex
+++ b/docs/interni/verbali/2023_07_11_I/2023_07_11_I.tex
@@ -45,7 +45,7 @@
 La riunione settimanale del gruppo è stata svolta martedì 11-07-2023 e non lunedì 10-07-2023 perchè per impegni personali e per esami non è stato possibile incontrarsi prima.
 Durante la riunione è stato discusso sullo stato dell'avanzamento del \textit{Proof Of Concept}, in particolare ciò che è stato fatto riguarda:
 \begin{itemize}
-    \item Sistemazione dei conflitti dobuti all'integrazione nel branch dev del branch temporaneo si sviluppo;
+    \item Sistemazione dei conflitti dovuti all'integrazione nel branch dev del branch temporaneo di sviluppo;
     \item Integrazione del database nel dev per permettere di lavorare coerentemente sulle aree illuminate;
     \item Ripulite gran parte delle issues che riguardano il \textit{Proof Of Concept}, lasciando le ultime issues da completare.
 \end{itemize}
