--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -366,6 +366,85 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
 \end{tabular}\\[8pt]
 
+\subsubsection{Sprint 9}
+\textbf{Data di inizio:} 04/07/2023\newline
+\textbf{Data di fine:} 11/07/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item Avanzamento dello sviluppo del \textit{Proof of Concept}
+    \begin{itemize}
+        \item Sistemazione conflitti dovuti all'integrazione sul branch \textit{dev};
+        \item Integrazione del DB nel branch \textit{dev};
+        \item Pulizia delle \textit{issues} legate agli avanzamenti nel \textit{Proof of Concept}.
+    \end{itemize}
+\end{itemize}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item Risoluzione dei conflitti di \textit{merge}.
+\end{itemize}
+\includegraphics[scale=0.176]{RTB_8.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & 1 & & & & & 14.5(+1)\\
+    \hline
+    Francesco & & & & & 2 & & 13.5(+2)\\
+    \hline
+    Lorenzo & & & & & 2 & & 13(+2)\\
+    \hline
+    Matteo & & & & 1.5 & & & 17.5(+1.5)\\
+    \hline
+    Nicolas & 1 & & & & & & 18(+1)\\
+    \hline
+    Romina & & & 1 & & & & 13(+1)\\
+    \hline
+    \textbf{Totale} & 14(+1) & 17(+1) & 25(+1) & 5.5(+1.5) & 18(+4) & 12(+0) & 89.5(+8.5)\\
+    \hline
+\end{tabular}\\[8pt]
+
+\subsubsection{Sprint 10}
+\textbf{Data di inizio:} 12/07/2023\newline
+\textbf{Data di fine:} 19/07/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item Avanzamento dello sviluppo del \textit{Proof of Concept}
+    \begin{itemize}
+        \item Completata la parte legata alla modifica di un'area illuminata;
+        \item Aggiunte le possibilità di inserimento, modifica ed eliminazione
+        di sensori, lampioni ed aree illuminate;
+        \item Integrazione della segnalazione dei guasti.
+    \end{itemize}
+\end{itemize}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item Nulla da segnalare.
+\end{itemize}
+\includegraphics[scale=0.178]{RTB_9.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & & & & & 1 & 14.5(+1)\\
+    \hline
+    Francesco & & & & & 1 & & 12.5(+1)\\
+    \hline
+    Lorenzo & & & & 3 & & & 14(+3)\\
+    \hline
+    Matteo & 1 & & & & & & 17(+1)\\
+    \hline
+    Nicolas & & 1 & & & & & 18(+1)\\
+    \hline
+    Romina & & & & & 2 & & 14(+2)\\
+    \hline
+    \textbf{Totale} & 14(+1) & 17(+1) & 24(+0) & 7(+3) & 17(+3) & 13(+1) & 98.5(+9)\\
+    \hline
+\end{tabular}\\[8pt]
+
 \newpage
 
 \section{Preventivo delle ore e dei costi}
