Allineamento parziale di alcuni documenti per rtb

--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -18,6 +18,8 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{0.0.2}{10/05/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunti nuovi vocaboli derivanti da \textit{Motivazione delle Scelte} e anche da \textit{Norme di Progetto}}
 \addversione{0.0.3}{30/05/2023}{Cavaliere Erica}{Alberti Nicolas}{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
 \addversione{0.0.4}{09/06/2023}{Salami Lorenzo}{Ceccato Francesco}{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
+\addversione{0.1.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Verifica del documento per RTB}
+\addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione del documento per candidatura RTB}
 
 \begin{document}
 \makeindexdetails
