--- a/docs/interni/verbali/2023_07_11_I/2023_07_11_I.tex
+++ b/docs/interni/verbali/2023_07_11_I/2023_07_11_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 11/07/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 11/07/2023
