aggiunta struttura di base per tabella rischi

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -47,8 +47,18 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 Le tecnologie consigliate per lo svolgimento del progetto da parte del richiedente possono risultare nuove per alcuni componenti del gruppo, questo può portare difficoltà nell'utilizzo delle tecnologie, portando di conseguenza errori nel codice e ritardi di consegna. \newline
 Per prefissare le scadenze bisognerà tenere conto del tempo impiegato per imparare le nuove tecnologie, oltre al tempo di sviluppo del progetto stesso.
 
+\begin{center}
+\begin{tabular}{||c|c|c|c|c||}
+    \hline
+    \textbf{ID} & \textbf{Tipo} & \textbf{Descrizione} & \textbf{Frequenza} & \textbf{Gravità} \\
+\end{tabular}
+\end{center}
+
 \subsection{Rischi organizzativi}
 Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi di organizzazione degli orari e quindi di non riuscire a rispettare la stima delle ore richiesta e, di conseguenza, sforare i costi indicati dal preventivo iniziale.
+
+\subsection{Rischi derivanti dai Requisiti}
+Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della soluzione che meglio si adatti alle richieste del committente e alla possibile malcomprensione dei requisiti stessi
 \newpage
 \section{Pianificazione del lavoro}
 
